kubernetes/ingress.yml

# Source: ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    labels:
        helm.sh/chart: ingress-nginx-3.4.1
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/version: 0.40.2
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: controller
    name: ingress-nginx-controller
    namespace: ingress-nginx
spec:
    type: LoadBalancer
    externalTrafficPolicy: Local
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: http
        - name: https
          port: 443
          protocol: TCP
          targetPort: https
    selector:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/component: controller
---
# Source: ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        helm.sh/chart: ingress-nginx-3.4.1
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/version: 0.40.2
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: controller
    name: ingress-nginx-controller
    namespace: ingress-nginx
spec:
    selector:
        matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/component: controller
    revisionHistoryLimit: 10
    minReadySeconds: 0
    template:
        metadata:
            labels:
                app.kubernetes.io/name: ingress-nginx
                app.kubernetes.io/instance: ingress-nginx
                app.kubernetes.io/component: controller
        spec:
            dnsPolicy: ClusterFirst
            containers:
                - name: controller
                  image: k8s.gcr.io/ingress-nginx/controller:v0.40.2@sha256:46ba23c3fbaafd9e5bd01ea85b2f921d9f2217be082580edc22e6c704a83f02f
                  imagePullPolicy: IfNotPresent
                  lifecycle:
                      preStop:
                          exec:
                              command:
                                  - /wait-shutdown
                  args:
                      - /nginx-ingress-controller
                      - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
                      - --default-backend-service=default/auth-service-service
                      - --election-id=ingress-controller-leader
                      - --ingress-class=nginx
                      - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
                      - --validating-webhook=:8443
                      - --validating-webhook-certificate=/usr/local/certificates/cert
                      - --validating-webhook-key=/usr/local/certificates/key
                  securityContext:
                      capabilities:
                          drop:
                              - ALL
                          add:
                              - NET_BIND_SERVICE
                      runAsUser: 101
                      allowPrivilegeEscalation: true
                  livenessProbe:
                      httpGet:
                          path: /healthz
                          port: 10254
                          scheme: HTTP
                      initialDelaySeconds: 10
                      periodSeconds: 10
                      timeoutSeconds: 1
                      successThreshold: 1
                      failureThreshold: 5
                  readinessProbe:
                      httpGet:
                          path: /healthz
                          port: 10254
                          scheme: HTTP
                      initialDelaySeconds: 10
                      periodSeconds: 10
                      timeoutSeconds: 1
                      successThreshold: 1
                      failureThreshold: 3
                  ports:
                      - name: http
                        containerPort: 80
                        protocol: TCP
                      - name: https
                        containerPort: 443
                        protocol: TCP
                      - name: webhook
                        containerPort: 8443
                        protocol: TCP
                  volumeMounts:
                      - name: webhook-cert
                        mountPath: /usr/local/certificates/
                        readOnly: true
                  resources:
                      requests:
                          cpu: 100m
                          memory: 90Mi
            serviceAccountName: ingress-nginx
            terminationGracePeriodSeconds: 300
            volumes:
                - name: webhook-cert
                  secret:
                      secretName: ingress-nginx-admission
