kubernetes/ingress-https.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ngress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - apiv2.stemuli.net
    secretName: tls-secret
  rules:
  - host: apiv2.stemuli.net
    http:
      paths:
      - backend:
          serviceName: auth-service-service
          servicePort: 80
        path: /(.*)
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ngress-nginx-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - apiv2.stemuli.net
    secretName: tls-secret
  rules:
  - host: apiv2.stemuli.net
    http:
      paths:
      - backend:
          serviceName: auth-service-service
          servicePort: 80
        path: /static(/|$)(.*)
